Another try to solve JAR loading problem in Travis-CI
- fix URL